Fixed the text-alignment.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -2082,6 +2082,7 @@ main {
         p {
           color: map-get($primary-colors, "white");
           margin: 0px;
+          text-align: left;
         }
       }
 
